--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Play Rock, Paper. Scissors</h1>
+    <p>First to three wins.</p>
+    <button onclick='game();'>Play</button>
     <script src="./RPS.js"></script>
 </body>
 </html>
