--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ondin Project RPS</title>
 </head>
 <body>
-    <h1>Play Rock, Paper. Scissors</h1>
+    <h1>Play Rock, Paper & Scissors</h1>
     <p>First to three wins.</p>
     <button onclick='game();'>Play</button>
     <script src="./RPS.js"></script>
